---
source: src/query.rs
expression: root_decls
---
[
    Decl {
        module: String(
            u!("bar"),
        ),
        id: u!("Y"),
        fqid: u!("Y"),
        kind: RedefRecord(
            [
                Decl {
                    module: None,
                    id: u!("y2"),
                    fqid: u!("bar::Y::y2"),
                    kind: Field(
                        [
                            u!("&optional"),
                        ],
                    ),
                    is_export: None,
                    loc: Some(
                        Location {
                            range: Range {
                                start: Position {
                                    line: 24,
                                    character: 18,
                                },
                                end: Position {
                                    line: 24,
                                    character: 20,
                                },
                            },
                            selection_range: Range {
                                start: Position {
                                    line: 24,
                                    character: 18,
                                },
                                end: Position {
                                    line: 24,
                                    character: 20,
                                },
                            },
                            uri: InternedUri(Id(_)),
                        },
                    ),
                    documentation: u!("A new field.\n* * *\n```zeek\n# In bar::Y\ny2: count &optional;\n```"),
                },
            ],
        ),
        is_export: Some(
            false,
        ),
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 22,
                        character: 14,
                    },
                    end: Position {
                        line: 25,
                        character: 16,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 22,
                        character: 27,
                    },
                    end: Position {
                        line: 22,
                        character: 28,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\nredef record Y += {\n                  ## A new field.\n                  y2: count &optional;\n              };\n```"),
    },
    Decl {
        module: String(
            u!("bar"),
        ),
        id: u!("fun"),
        fqid: u!("bar::fun"),
        kind: FuncDecl(
            Signature {
                result: Some(
                    String,
                ),
                args: [
                    Decl {
                        module: None,
                        id: u!("x"),
                        fqid: u!("x"),
                        kind: Variable,
                        is_export: None,
                        loc: Some(
                            Location {
                                range: Range {
                                    start: Position {
                                        line: 19,
                                        character: 35,
                                    },
                                    end: Position {
                                        line: 19,
                                        character: 36,
                                    },
                                },
                                selection_range: Range {
                                    start: Position {
                                        line: 19,
                                        character: 35,
                                    },
                                    end: Position {
                                        line: 19,
                                        character: 43,
                                    },
                                },
                                uri: InternedUri(Id(_)),
                            },
                        ),
                        documentation: u!("```zeek\nx: count\n```"),
                    },
                ],
            },
        ),
        is_export: Some(
            false,
        ),
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 19,
                        character: 14,
                    },
                    end: Position {
                        line: 19,
                        character: 53,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 19,
                        character: 21,
                    },
                    end: Position {
                        line: 19,
                        character: 24,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\nglobal fun: function(x: count): string;\n```"),
    },
    Decl {
        module: String(
            u!("bar"),
        ),
        id: u!("fun"),
        fqid: u!("bar::fun"),
        kind: FuncDef(
            Signature {
                result: Some(
                    String,
                ),
                args: [
                    Decl {
                        module: None,
                        id: u!("x"),
                        fqid: u!("x"),
                        kind: Variable,
                        is_export: None,
                        loc: Some(
                            Location {
                                range: Range {
                                    start: Position {
                                        line: 20,
                                        character: 27,
                                    },
                                    end: Position {
                                        line: 20,
                                        character: 28,
                                    },
                                },
                                selection_range: Range {
                                    start: Position {
                                        line: 20,
                                        character: 27,
                                    },
                                    end: Position {
                                        line: 20,
                                        character: 35,
                                    },
                                },
                                uri: InternedUri(Id(_)),
                            },
                        ),
                        documentation: u!("```zeek\nx: count\n```"),
                    },
                ],
            },
        ),
        is_export: Some(
            false,
        ),
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 20,
                        character: 14,
                    },
                    end: Position {
                        line: 20,
                        character: 59,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 20,
                        character: 23,
                    },
                    end: Position {
                        line: 20,
                        character: 26,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\nfunction fun(x: count): string { return \"\"; }\n```"),
    },
    Decl {
        module: String(
            u!("bar"),
        ),
        id: u!("zeek_init"),
        fqid: u!("bar::zeek_init"),
        kind: EventDef(
            Signature {
                result: None,
                args: [],
            },
        ),
        is_export: Some(
            false,
        ),
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 15,
                        character: 14,
                    },
                    end: Position {
                        line: 17,
                        character: 15,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 15,
                        character: 20,
                    },
                    end: Position {
                        line: 15,
                        character: 29,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\nevent zeek_init() { local x=1;\n                  # Comment.\n              }\n```"),
    },
    Decl {
        module: String(
            u!("test"),
        ),
        id: u!("Y"),
        fqid: u!("test::Y"),
        kind: Type(
            [
                Decl {
                    module: None,
                    id: u!("y"),
                    fqid: u!("test::Y::y"),
                    kind: Field(
                        [
                            u!("&optional"),
                        ],
                    ),
                    is_export: None,
                    loc: Some(
                        Location {
                            range: Range {
                                start: Position {
                                    line: 11,
                                    character: 18,
                                },
                                end: Position {
                                    line: 11,
                                    character: 19,
                                },
                            },
                            selection_range: Range {
                                start: Position {
                                    line: 11,
                                    character: 18,
                                },
                                end: Position {
                                    line: 11,
                                    character: 19,
                                },
                            },
                            uri: InternedUri(Id(_)),
                        },
                    ),
                    documentation: u!("A field.\n* * *\n```zeek\n# In test::Y\ny: vector of count &optional;\n```"),
                },
            ],
        ),
        is_export: Some(
            false,
        ),
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 9,
                        character: 14,
                    },
                    end: Position {
                        line: 12,
                        character: 16,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 9,
                        character: 19,
                    },
                    end: Position {
                        line: 9,
                        character: 20,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("Y does the y.\nIt takes no arguments.\nBut it also has a field y\n* * *\n```zeek\ntype Y: record {\n                  ## A field.\n                  y: vector of count &optional;\n              };\n```"),
    },
    Decl {
        module: String(
            u!("test"),
        ),
        id: u!("x"),
        fqid: u!("test::x"),
        kind: Const,
        is_export: Some(
            true,
        ),
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 3,
                        character: 18,
                    },
                    end: Position {
                        line: 3,
                        character: 37,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 3,
                        character: 24,
                    },
                    end: Position {
                        line: 3,
                        character: 25,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\nconst x = 1 &redef;\n```"),
    },
    Decl {
        module: String(
            u!("test"),
        ),
        id: u!("y"),
        fqid: u!("test::y"),
        kind: Global,
        is_export: Some(
            true,
        ),
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 4,
                        character: 18,
                    },
                    end: Position {
                        line: 4,
                        character: 31,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 4,
                        character: 25,
                    },
                    end: Position {
                        line: 4,
                        character: 26,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\nglobal y = 1;\n```"),
    },
]
